Refactored A lot, added MVVM, added Services
Got Xamarin to work, Added three main Views:
 - HeroPage: 80% done, This page is almost done, it uses ItemViewModel
 to controll it's 5 picker objects.
 - FightPage: 0% done, This page is suppose to have the monster and the
 Hero, and allow them to roll dices agains each other, now it is empty
 - MainPage: Navigation, very clumsy, but works

Added state through Services
 - DescentDataStore: Mockup, keeps track of all items and the current
 herro, in the future it should also have all possible heros and
 monsters

--- a/DescentApp/DescentApp/DescentApp.csproj
+++ b/DescentApp/DescentApp/DescentApp.csproj
@@ -28,18 +28,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="FightPage.xaml">
+    <EmbeddedResource Update="Views\FightPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="HeroPage.xaml">
+    <EmbeddedResource Update="Views\HeroPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="SetupHeroPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\" />
   </ItemGroup>
 </Project>
