Updated gear logic and test
New Class GearFactory
 - this file reads the files in Data/Items/*/*.tsv
 - and creates Main/OffHand Armor and trinkets
 - it seems to work with 2 caviats:
 - it's tests fails because Items are not comparable :(
 - DescentFileStore cannot use it because the files in Data/Items/
   are not moved when I compile :(

all ActII items have been entered, but the abillities that are not
implemented such as Stun, or +1 range AND +1 attack have not been added

--- a/DescentCore/DescentCore.csproj
+++ b/DescentCore/DescentCore.csproj
@@ -4,4 +4,34 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="armor.tsv" />
+    <None Remove="Data\Items\ActI\armor.tsv" />
+    <None Remove="Data\Items\ActI\main_hand.tsv" />
+    <None Remove="Data\Items\ActI\off_hand.tsv" />
+    <None Remove="Data\Items\ActI\trinket.tsv" />
+    <None Remove="Data\main_hand.tsv" />
+    <None Remove="Data\off_hand.tsv" />
+    <None Remove="Data\trinket.tsv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Data\Items\ActI\armor.tsv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\Items\ActI\main_hand.tsv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\Items\ActI\off_hand.tsv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\Items\ActI\trinket.tsv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="5.2.1" />
+  </ItemGroup>
+
 </Project>
