Got FileDataStore to work
It can now download the files from the githiub repository, so I don't
need to figure out how asserts work on android, and whatnot on iOS and
UWP!

--- a/DescentApp/DescentApp.Android/DescentApp.Android.csproj
+++ b/DescentApp/DescentApp.Android/DescentApp.Android.csproj
@@ -62,6 +62,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\armor.tsv" />
+    <AndroidAsset Include="Assets\main_hand.tsv" />
+    <AndroidAsset Include="Assets\off_hand.tsv" />
+    <AndroidAsset Include="Assets\trinket.tsv" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
